Quick fixes: z-index, focus indicator, bg color before landing img loads

--- a/sass/_land.sass
+++ b/sass/_land.sass
@@ -11,6 +11,7 @@ $land-padding-bottom: 60px
 	right: 0
 	bottom: 0
 	left: 0	
+	background-color: #000
 	background-image: url('../img/land-bg.png')
 	background-size: cover
 	background-position: center center
